@@ -32,6 +32,6 @@ zcml =
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = z3c.soap
+eggs = z3c.soap [test]
        Zope2
 defaults = ['--tests-pattern', '^f?tests$', '-c', '--module=z3c.soap']
